# vibe-node

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE-DATA  README.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  tests.yml
.hypothesis/constants/: 03879d8760355c26  03b56bd2e20466c8  08b6b4dc28ea536a  0a675d0f1e12dfc8  0ee6a602cebf8039  22d37ace549bbad3  287515771fa348ca  30ac99c1b4aab31d  3c64c2b6fbd9acfa  461e8f2fca80c9cc  46d9b28d85cde8a3  49c98cc6a1577e11  50cecc4ec860b41b  601c7716c8d38117  63aa93e025f99419  73da4281f16fc001  7448018f3db67fcb  7883db6d7d46291c  8670426b21ec1455  8c7fc36b398b4701  9b74fc2d3a8afcd7  9c239e0c63920c3e  a3a5180dbf3e49cf  b25543cae4aab632  d0498c313c534d9d  d33940b135fb5248  d4937875fb97ca4f  d87888911f6a329b  e94a19f5642e6235  e962f9b68b57ff0c
.hypothesis/examples/04e6b3400353b141/: 97950f78005cb638
.hypothesis/examples/97950f78005cb638/: 759ef8efbce87e3e
benchmarks/: baselines.json  chain_sync_benchmark.py
benchmarks/data_architecture/: bench_dict_memory.py  bench_storage.py
benchmarks/data_structures/: bench_candidates.py  bench_real_workload.py  bench_serialization.py
docs/: index.md
docs/about/: challenge.md  coordination.md  index.md  methodology.md  toolchain.md
docs/architecture/: overview.md
docs/development/: benchmarks.md  data-architecture.md  index.md  milestones.md  preview-sync-benchmark.md  tasks.md  test-strategy.md
docs/development/devlog/: index.md  phase0-wave1.md  phase0-wave2.md  phase0-wave3.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
docs/development/subsystems/: block-production.md  consensus.md  index.md  miniprotocols-n2c.md  miniprotocols-n2n.md  serialization.md  storage.md
docs/devlog/: index.md
docs/gap-analysis/: index.md
docs/how-it-works/: block-production.md  consensus.md  index.md  ledger.md  mempool.md  miniprotocols.md  networking.md  plutus.md  serialization.md  storage.md  transaction-lifecycle.md
docs/javascripts/: mathjax.js
docs/methodology/: agents.md  coordination.md  index.md  toolchain.md  workflow.md
docs/node-reference/: index.md
docs/node-reference/cardano/: index.md
docs/node-reference/core/: index.md  multiplexer.md  protocols.md  rwlock.md  stm.md  storage.md
docs/reference/: architecture-blueprint.md  cbor2pure-fork-plan.md  cbor2pure-roundtrip-issue.md  cli-reference.md  code-style.md  data-architecture.md  data-structure-benchmark-report.md  dependency-audit.md  duplication-report.md  error-handling-audit.md  index.md  library-audit.md  logging-audit.md  package-structure.md  pycardano-fork-plan.md  schema.md  test-inventory.md  test-matrix.md  test-parity-matrix.md  test-strategy.md  testing.md  uplc-fork-plan.md  uplc-gap-report.md  workflow.md
docs/reference/pipelines/: block-production-validation.md  code-indexing.md  forge-loop-comparison.md  github-ingestion.md  spec-ingestion.md
docs/reference/subsystems/: ledger.md  mempool.md  networking.md  plutus.md  storage.md
docs/roadmap/: milestones.md
docs/specs/: gap-analysis.md  index.md
docs/specs/alonzo/: frontmatter.md  index.md  ledger.md  notation.md  properties.md  protocol-parameters.md  utxo.md
docs/specs/byron/: blockchain-interface.md  blockchain-spec.md  index.md  (+7 more)
docs/stylesheets/: extra.css
infra/cardano/: README.md  fetch-config.sh
infra/db/: create_indexes.sql  init.sql  migrate_phase1.sql
infra/devnet/: .gitignore  Dockerfile.vibe-node  README.md  docker-compose.devnet.yml
infra/mithril/: Dockerfile  entrypoint.sh
infra/ollama/: Modelfile  init.sh
infra/paddleocr/: Dockerfile  server.py
infra/preview-sync/: .gitignore  Dockerfile.preview-sync  docker-compose.haskell-sync.yml  docker-compose.preview-sync.yml
scripts/: analyze-sync-results.py  build-vrf.sh  capture-metrics.py  check-benchmark-regression.py  run-haskell-sync-benchmark.sh  run-sync-benchmark.sh
src/vibe_node/: __init__.py  cli.py  cli_infra.py  cli_xref.py
tests/: test_haskell_parser.py  test_search.py
tests/benchmark/: __init__.py  conftest.py  test_bench_cbor.py  test_bench_crypto.py  test_bench_forge.py  test_bench_operations.py  test_bench_pipeline.py
tests/conformance/: __init__.py  conftest.py  generate_fixtures.py  helpers.py  test_block_decode.py  test_cddl_conformance.py  test_ledger_conformance.py  test_ogmios_connection.py  test_plutus_conformance.py  test_uplc_conformance.py
tests/integration/: __init__.py  conftest.py  test_blockfetch_live.py  test_cbor_roundtrip.py  test_chainsync_live.py  test_devnet.py  test_genesis_validation.py  test_handshake_live.py  test_phase3_gate.py
tests/property/: test_bearer_props.py  test_binary_lib_roundtrips.py  test_block_header_props.py  test_cardano_type_roundtrips.py  test_cbor_roundtrip.py  test_codec_splits.py  test_era_type_roundtrips.py  test_golden_vectors.py  test_immutabledb_statemachine.py  test_ledger_props.py  test_protocol_props.py  test_segment_props.py  test_volatiledb_statemachine.py
tests/unit/: test_allegra_mary.py  test_allegra_mary_gaps.py  test_alonzo.py  test_alonzo_audit.py  test_alonzo_types.py  test_alonzo_utxow_failures.py  test_alonzo_valid_bbody.py  test_babbage.py  test_babbage_audit.py  test_bearer.py  test_block_body.py  test_block_header.py  test_blockfetch_messages.py  test_blockfetch_pipelined.py  test_blockfetch_protocol.py  test_blockfetch_scheduling.py  test_byron_gaps.py  test_byron_rules.py  test_byron_types.py  test_chaindb.py  test_chaindb_gaps.py  test_chaindb_out_of_order.py  test_chainsync_client_consensus.py  test_chainsync_messages.py  test_chainsync_protocol.py  test_conway.py  test_conway_audit.py  test_conway_enact_drep.py  test_conway_governance_gaps.py  test_conway_reorder_ledger.py  test_crash_recovery.py  test_handshake.py  test_handshake_protocol.py  test_haskell_parser.py  test_immutabledb.py  test_immutabledb_advanced.py  test_ledgerdb.py  test_ledgerdb_snapshot_policy.py  test_mithril_import.py  test_multi_peer_blockfetch.py  (+16 more)
(+350 files in other folders)
