[project]
name = "vibe-node"
version = "0.6.0"
description = "A vibe-coded Cardano node"
readme = "README.md"
authors = [
    { name = "Elder Millenial", email = "eldermillenial@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "vibe-cardano",
    "vibe-tools",
    "typer>=0.15",
]

[project.scripts]
vibe-node = "vibe_node.cli:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
vibe-core = { workspace = true }
vibe-cardano = { workspace = true }
vibe-tools = { workspace = true }

[tool.bumpversion]
current_version = "0.6.0"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>dev)(?P<dev>\d+))?'
serialize = [
    "{major}.{minor}.{patch}.{release}{dev}",
    "{major}.{minor}.{patch}",
]
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/vibe_node/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "VERSION"
search = "{current_version}"
replace = "{new_version}"

[tool.bumpversion.parts.release]
optional_value = "rel"
values = ["dev", "rel"]

[tool.bumpversion.parts.dev]
first_value = 0

[tool.pytest.ini_options]
testpaths = ["tests", "packages/vibe-cardano/tests"]
asyncio_mode = "auto"
timeout = 300
addopts = "-p no:benchmark"
markers = [
    "unit: Unit tests — isolated function/module correctness",
    "property: Property tests — invariant verification via Hypothesis",
    "conformance: Conformance tests — bit-for-bit match with Haskell node",
    "integration: Integration tests — multi-component with Docker Compose",
    "fixture_only: Tests using cached fixtures only — never skipped for missing Ogmios",
    "devnet: Devnet integration tests — 3-node private cluster validation",
    "slow: Slow tests — benchmarks, statistical tests, large data sets",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "cbor2pure>=5.8.0",
    "hypothesis>=6.130.0",
    "lancedb>=0.30.0",
    "mkdocs-material>=9.7.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "websockets>=15.0",
]
